Fixed overflowing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,14 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    overflow-x: hidden;
+}
+
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
@@ -392,7 +400,7 @@ textarea {
 
     .header__nav-list {
         flex-direction: column;
-        gap: var(--spacing-sm);
+        gap: var(--spacing-lg);
     }
 
     .header__nav-link {
